--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 <!--            <version>1.2.0</version>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
